No idea what I'm doing here.

--- a/Twipster For Chrome/options.html
+++ b/Twipster For Chrome/options.html
@@ -41,28 +41,12 @@
   
   <h2>Font Size:</h2>
   <ul class="seg-ctrl">
-    <li><a href="#" class="set-font-size">16</a></li>
-    <li><a href="#" class="set-font-size">18</a></li>
-    <li><a href="#" class="set-font-size">20</a></li>
-    <li><a href="#" class="set-font-size">22</a></li>
-    <li><a href="#" class="set-font-size">24</a></li>
+    <li><a href="#" id="fs-16" class="set-font-size">16</a></li>
+    <li><a href="#" id="fs-18" class="set-font-size">18</a></li>
+    <li><a href="#" id="fs-20" class="set-font-size">20</a></li>
+    <li><a href="#" id="fs-22" class="set-font-size">22</a></li>
+    <li><a href="#" id="fs-24" class="set-font-size">24</a></li>
   </ul>
-  
-  
-  <select id="font-size">
-    <option value="16">16</option>
-    <option value="18">18</option>
-    <option value="20">20</option>
-    <option value="22">22</option>
-    <option value="24">24</option>
-    <option value="26">26</option>
-  </select>
-  
-  <br>
-  
-  <button id="save">Save</button>
-  
-  <div id="status"></div>
   
 </div>
 </body>
