Started on Dark Theme

--- a/Twipster For Chrome/options.html
+++ b/Twipster For Chrome/options.html
@@ -118,7 +118,7 @@
   <h2>Theme</h2>
   <ul class="seg-ctrl">
     <li><a href="#" id="theme-minimal" class="set-theme" data-theme="minimal">Minimal</a></li>
-    <li><a href="#" id="theme-night" class="set-theme" data-theme="night">Night Mode</a></li>
+    <li><a href="#" id="theme-night" class="set-theme" data-theme="dark">Night Mode</a></li>
   </ul>
   
   <div class="font-size-example">
