--- a/Twipster For Chrome/options.html
+++ b/Twipster For Chrome/options.html
@@ -11,11 +11,9 @@
     background-color: #eee;}
   a {
     text-decoration: none;
-    color: #34a9de;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
+    color: #34a9de;}
+    a:hover {
+      text-decoration: underline;}
   @-webkit-keyframes popin {
     0% {    -webkit-transform: scale(.5); }
     80% {   -webkit-transform: scale(1.1); }
@@ -27,14 +25,12 @@
     overflow: auto;}
   .header {
     overflow: auto;
-    margin-bottom: 2rem;
-  }
+    margin-bottom: 2rem;}
   .logo {
     width: 6rem;
     height: 6rem;
     float: left;
-    margin-right: 1rem;
-  }
+    margin-right: 1rem;}
   h1 { margin-bottom: 1rem; }
   h2 { margin-bottom: .5rem; }
   .seg-ctrl {
@@ -53,47 +49,37 @@
         line-height: 3rem;
         padding: 0 2rem;}
         .seg-ctrl li a:hover { background-color: #237299; }
-        .seg-ctrl li a.active { background-color: #34a9de; }
-        
-  
+        .seg-ctrl li a.active { background-color: #34a9de; }     
   .toast {
     margin-left: 7rem;
     min-height: 3rem;
-    /* line-height: 2rem; */
     padding: 1rem;
-    background: #eee;
+    background-color: #fff;
     border-radius: .125rem;
-    /* display: none; */
+    display: none;
     -webkit-animation: popin .1s; }
-  .font-size-example {
+  .example {
     background-color: #fff;
     padding: 12px;
-    border-radius: .125rem;
-  }
-  .example-tweet {
-    font-weight: normal;
-    color: #333;
-    margin: 12px 0;
-  }
-  .example-tweet-avatar {
-    float: left;
-    width: 48px;
-    margin-top: 4px;
-    margin-right: 10px;
-  }
-  .example-fullname,
-  .example-username {
-    color: #aaa;
-    font-size: 12px;
-    line-height: 12px;
-  }
-  .example-tweet-text {
-    font-family: Georgia;
-    line-height: 1.5;
-    margin-left: 58px;
-  }
-  
-        
+    border-radius: .125rem;}
+    .example-tweet {
+      font-weight: normal;
+      color: #333;
+      margin: 12px 0;}
+      .example-tweet-avatar {
+        float: left;
+        width: 48px;
+        margin-top: 4px;
+        margin-right: 10px;}
+      .example-fullname,
+      .example-username {
+        color: #aaa;
+        font-size: 12px;
+        line-height: 12px;}
+      .example-tweet-text {
+        font-family: Georgia;
+        line-height: 1.5;
+        margin-left: 58px;}    
 </style>
 
 <body>
@@ -115,13 +101,7 @@
     <li><a href="#" id="fs-24" class="set-font-size" data-font-size="24">Glorious 24px</a></li>
   </ul>
   
-  <h2>Theme</h2>
-  <ul class="seg-ctrl">
-    <li><a href="#" id="theme-minimal" class="set-theme" data-theme="minimal">Minimal</a></li>
-    <li><a href="#" id="theme-night" class="set-theme" data-theme="dark">Night Mode</a></li>
-  </ul>
-  
-  <div class="font-size-example">
+  <div class="example">
     <h3>Preview:</h3>
     <div class="example-tweet">
       <img src="icon.svg" class="example-tweet-avatar" />
