fix to chrome install link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section id="download" class="py2">
       <h1 class="h1">Install now</h1>
       <p class="p mb1">Twipster is a browser extenstion that alters the styles on twitter.com.</p>
-      <a href="#" onclick="chrome.webstore.install()" id="chrome-install-button" class="p btn btn-blue mr1 mb1">Add to Chrome</a>
+      <a href="#!" onclick="chrome.webstore.install()" id="chrome-install-button" class="p btn btn-blue mr1 mb1">Add to Chrome</a>
       <a href="http://jxnblk.github.io/Twipster/Twipster.safariextz" onclick="_gaq.push(['_trackEvent', 'Installs', 'Install', 'Twipster Safari']);" class="p btn btn-blue mb1">Download for Safari</a>
     </section>
 
