--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Twipster</title>
   <meta name="author" content="Jxnblk">
-  <meta name="description" content="Safari & Chrome extension for a simpler, more readable Twitter experience.">
+  <meta name="description" content="Chrome extension for a simpler, more readable Twitter experience.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="site/icon128.png" />
   <link rel="apple-touch-icon-precomposed" href="site/icon128.png" />
@@ -82,7 +82,9 @@
       <h1 class="h1">Install now</h1>
       <p class="p mb1">Twipster is a browser extenstion that alters the styles on twitter.com.</p>
       <a href="#" onclick="chrome.webstore.install()" id="chrome-install-button" class="p btn btn-blue mr1 mb1">Add to Chrome</a>
+      <!--
       <a href="http://jxnblk.com/twipster/Twipster.safariextz" onclick="_gaq.push(['_trackEvent', 'Installs', 'Install', 'Twipster Safari']);" class="p btn btn-blue mb1">Download for Safari</a>
+      -->
     </section>
 
   </main>
