--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Twipster</title>
   <meta name="author" content="Jxnblk">
-  <meta name="description" content="Chrome extension for a simpler, more readable Twitter experience.">
+  <meta name="description" content="Chrome and Safari extensions for a simpler, more readable Twitter experience.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="site/icon128.png" />
   <link rel="apple-touch-icon-precomposed" href="site/icon128.png" />
@@ -23,7 +23,7 @@
 
   <section id="download" class="container px2 py4">
     <h1 class="">Install now</h1>
-    <p class="h3 bold">Twipster is a browser extenstion that alters the styles for twitter.com.</p>
+    <p class="h3 bold">Twipster is a browser extension that alters the styles for twitter.com.</p>
     <a href="#!" onclick="chrome.webstore.install()" id="chrome-install-button" class="button button-blue">Add to Chrome</a>
     <a href="http://jxnblk.com/Twipster/dist/Twipster.safariextz" class="button button-blue">Add to Safari</a>
   </section>
